Builld: vscode deno 설정

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,28 +8,29 @@
   "settings": {},
 
   "extensions": [
-    "naumovs.color-highlight",
-    "fabiospampinato.vscode-highlight",
-    "dbaeumer.vscode-eslint",
-    "steoates.autoimport",
-    "vscode-icons-team.vscode-icons",
-    "ms-vscode.vscode-typescript-next",
-    "dsznajder.es7-react-js-snippets",
-    "mikestead.dotenv",
-    "formulahendry.auto-rename-tag",
-    "coenraads.bracket-pair-colorizer-2",
-    "mhutchie.git-graph",
-    "codezombiech.gitignore",
-    "eamodio.gitlens",
-    "wix.vscode-import-cost",
-    "oderwat.indent-rainbow",
-    "esbenp.prettier-vscode",
-    "rvest.vs-code-prettier-eslint",
-    "mutantdino.resourcemonitor",
-    "syler.sass-indented",
-    "gencer.html-slim-scss-css-class-completion",
-    "mrmlnc.vscode-scss",
-    "visualstudioexptteam.vscodeintellicode",
-    "rangav.vscode-thunder-client"
-  ]
+	"naumovs.color-highlight",
+	"fabiospampinato.vscode-highlight",
+	"dbaeumer.vscode-eslint",
+	"steoates.autoimport",
+	"vscode-icons-team.vscode-icons",
+	"ms-vscode.vscode-typescript-next",
+	"dsznajder.es7-react-js-snippets",
+	"mikestead.dotenv",
+	"formulahendry.auto-rename-tag",
+	"coenraads.bracket-pair-colorizer-2",
+	"mhutchie.git-graph",
+	"codezombiech.gitignore",
+	"eamodio.gitlens",
+	"wix.vscode-import-cost",
+	"oderwat.indent-rainbow",
+	"esbenp.prettier-vscode",
+	"rvest.vs-code-prettier-eslint",
+	"mutantdino.resourcemonitor",
+	"syler.sass-indented",
+	"gencer.html-slim-scss-css-class-completion",
+	"mrmlnc.vscode-scss",
+	"visualstudioexptteam.vscodeintellicode",
+	"rangav.vscode-thunder-client",
+	"denoland.vscode-deno"
+]
 }
