feat (gitpod) 컨테이너 생성시 oh-my-zsh 설치 스크립트 추가

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "shd101wyy.markdown-preview-enhanced",
     "christian-kohler.path-intellisense",
     "foxundermoon.shell-format",
-    "rangav.vscode-thunder-client"
+    "rangav.vscode-thunder-client",
+    "denoland.vscode-deno"
   ]
 }
